--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,47 +1,62 @@
+@import "colors.css";
+
 * {
-  border: none;
-  border-radius: 0;
+  all: unset;
   font-family: "Ubuntu";
   font-size: 1rem;
-  min-height: 0;
 }
 
 window#waybar {
-  background: rgba(43, 48, 59, 0.5);
-  border-bottom: 3px solid rgba(100, 114, 125, 0.5);
-  color: white;
+  background: transparent;
+  color: @on_surface;
 }
 
 tooltip {
-  background: rgba(43, 48, 59, 0.5);
-  border: 1px solid rgba(100, 114, 125, 0.5);
+  background: @background;
+  border: 1px solid @border;
+  border-radius: 30px;
 }
 tooltip label {
-  color: white;
+  color: @on_surface;
 }
 
 #clock,
 #pulseaudio,
 #network {
-  padding: 10px;
-  background-color: #2f3b4b;
+  padding: 12px;
+  background-color: @background;
+  color: @on_surface;
+  border-radius: 50px;
+  margin: 3px 5px 0px 5px;
+  transition: width 0.3s ease, padding 0.3s ease, background-color 0.3s ease;
 }
 
 #workspaces button {
-  padding: 0 5px;
-  background: transparent;
-  color: white;
-  border-bottom: 3px solid transparent;
+  padding: 11px;
+  background-color: @background;
+  color: @on_surface;
+  border-radius: 10px;
+  margin: 3px 2px 0px 2px;
+}
+#workspaces button.active {
+  background-color: @on_primary_container;
+  color: @background;
 }
 
-#workspaces button.focused {
-  background: #64727d;
-  border-bottom: 3px solid white;
+#clock:hover,
+#pulseaudio:hover,
+#network:hover {
+  background-color: @on_primary_container;
+  color: @background;
+}
+
+#workspaces button:hover {
+  background-color: @on_primary_container;
+  color: @background;
 }
 
 #mode,
-#clock,
-#battery {
+#clock {
   padding: 0 10px;
 }
 
