--- a/waybar/colors.css
+++ b/waybar/colors.css
@@ -3,103 +3,103 @@
 * Generated with Matugen
 */
 
-    @define-color background #12140e;
+    @define-color background #0f1416;
 
     @define-color error #ffb4ab;
 
     @define-color error_container #93000a;
 
-    @define-color inverse_on_surface #2f312a;
+    @define-color inverse_on_surface #2c3133;
 
-    @define-color inverse_primary #4e662a;
+    @define-color inverse_primary #006879;
 
-    @define-color inverse_surface #e2e3d8;
+    @define-color inverse_surface #dee3e5;
 
-    @define-color on_background #e2e3d8;
+    @define-color on_background #dee3e5;
 
     @define-color on_error #690005;
 
     @define-color on_error_container #ffdad6;
 
-    @define-color on_primary #213600;
+    @define-color on_primary #003640;
 
-    @define-color on_primary_container #cfeda1;
+    @define-color on_primary_container #abedff;
 
-    @define-color on_primary_fixed #111f00;
+    @define-color on_primary_fixed #001f26;
 
-    @define-color on_primary_fixed_variant #374e14;
+    @define-color on_primary_fixed_variant #004e5c;
 
-    @define-color on_secondary #2b331e;
+    @define-color on_secondary #1d343a;
 
-    @define-color on_secondary_container #dce7c7;
+    @define-color on_secondary_container #cee7ee;
 
-    @define-color on_secondary_fixed #161e0a;
+    @define-color on_secondary_fixed #061f24;
 
-    @define-color on_secondary_fixed_variant #414a33;
+    @define-color on_secondary_fixed_variant #334a51;
 
-    @define-color on_surface #e2e3d8;
+    @define-color on_surface #dee3e5;
 
-    @define-color on_surface_variant #c5c8b9;
+    @define-color on_surface_variant #bfc8cb;
 
-    @define-color on_tertiary #003734;
+    @define-color on_tertiary #282f4d;
 
-    @define-color on_tertiary_container #bcece6;
+    @define-color on_tertiary_container #dde1ff;
 
-    @define-color on_tertiary_fixed #00201e;
+    @define-color on_tertiary_fixed #131a37;
 
-    @define-color on_tertiary_fixed_variant #1f4e4a;
+    @define-color on_tertiary_fixed_variant #3e4565;
 
-    @define-color outline #8f9285;
+    @define-color outline #899295;
 
-    @define-color outline_variant #45483d;
+    @define-color outline_variant #3f484b;
 
-    @define-color primary #b4d088;
+    @define-color primary #84d2e6;
 
-    @define-color primary_container #374e14;
+    @define-color primary_container #004e5c;
 
-    @define-color primary_fixed #cfeda1;
+    @define-color primary_fixed #abedff;
 
-    @define-color primary_fixed_dim #b4d088;
+    @define-color primary_fixed_dim #84d2e6;
 
     @define-color scrim #000000;
 
-    @define-color secondary #c0caac;
+    @define-color secondary #b2cbd2;
 
-    @define-color secondary_container #414a33;
+    @define-color secondary_container #334a51;
 
-    @define-color secondary_fixed #dce7c7;
+    @define-color secondary_fixed #cee7ee;
 
-    @define-color secondary_fixed_dim #c0caac;
+    @define-color secondary_fixed_dim #b2cbd2;
 
     @define-color shadow #000000;
 
-    @define-color source_color #d6f3a9;
+    @define-color source_color #4bdbfa;
 
-    @define-color surface #12140e;
+    @define-color surface #0f1416;
 
-    @define-color surface_bright #383a32;
+    @define-color surface_bright #343a3c;
 
-    @define-color surface_container #1e2019;
+    @define-color surface_container #1b2122;
 
-    @define-color surface_container_high #282b23;
+    @define-color surface_container_high #252b2d;
 
-    @define-color surface_container_highest #33362e;
+    @define-color surface_container_highest #303638;
 
-    @define-color surface_container_low #1a1c16;
+    @define-color surface_container_low #171c1e;
 
-    @define-color surface_container_lowest #0d0f09;
+    @define-color surface_container_lowest #090f11;
 
-    @define-color surface_dim #12140e;
+    @define-color surface_dim #0f1416;
 
-    @define-color surface_tint #b4d088;
+    @define-color surface_tint #84d2e6;
 
-    @define-color surface_variant #45483d;
+    @define-color surface_variant #3f484b;
 
-    @define-color tertiary #a0d0ca;
+    @define-color tertiary #bec4eb;
 
-    @define-color tertiary_container #1f4e4a;
+    @define-color tertiary_container #3e4565;
 
-    @define-color tertiary_fixed #bcece6;
+    @define-color tertiary_fixed #dde1ff;
 
-    @define-color tertiary_fixed_dim #a0d0ca;
+    @define-color tertiary_fixed_dim #bec4eb;
 
